--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <title>Weather app</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/index.css">
   </head>
   <body>
     <div id="app"></div>
